# xhttp

./: CMakeLists.txt  README.md  required_libraries.txt  server-setup.readme  xhttp.tar
Encoder/: Encoder.c
client/: Client.c  client.c
crypt/: AES.c
includes/: crypt.h  logger.h  packet.h  utils.h
logger/: Logger.c
server/: Server.c  server.c
tests/: test.c
utils/: AddressUtility.c  Compressor.c  SocketUtility.c  TcpClientUtility.c  TcpServerUtility.c  Utils.c
